--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             >Web<span class="logo-style">Studio</span></a
           >
           <ul class="menu-nav">
-            <li><a href="./index.html" class="link">Studio</a></li>
+            <li><a href="./index.html" class="link now">Studio</a></li>
             <li><a href="" class="link">Portfolio</a></li>
             <li><a href="" class="link">Contacts</a></li>
           </ul>
