--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
       <section class="sekcja-dwa">
         <div class="container">
-          <h2 class="visually-hidden">nie może być pusty</h2>
+          <h2 class="visually-hidden">About us</h2>
           <ul class="ul-list-dwa">
             <li class="lis-dwa">
               <h3 class="header-trzy">Strategy</h3>
