--- a/index.html
+++ b/index.html
@@ -59,6 +59,11 @@
           <h2 class="visually-hidden">About us</h2>
           <ul class="ul-list-dwa">
             <li class="lis-dwa">
+              <div class="icon-box">
+                <svg class="icon" width="64" height="64">
+                  <use href="./images/SVG-ikony.svg/Antena-1.svg"></use>
+                </svg>
+              </div>
               <h3 class="header-trzy">Strategy</h3>
               <p class="pee">
                 Our goal is to identify the business problem to walk away with
