--- a/index.html
+++ b/index.html
@@ -71,6 +71,12 @@
               </p>
             </li>
             <li class="lis-dwa">
+              <div class="icon-box">
+                <svg class="icon" width="64" height="64">
+                  <use href="./images/SVG-ikony.svg/Zegar-2.svg"></use>
+                </svg>
+              </div>
+
               <h3 class="header-trzy">Punctuality</h3>
               <p class="pee">
                 Bring the key message to the brand's audience for the best price
@@ -78,6 +84,11 @@
               </p>
             </li>
             <li class="lis-dwa">
+              <div class="icon-box">
+                <svg class="icon" width="64" height="64">
+                  <use href="./images/SVG-ikony.svg/Laptop-3.svg"></use>
+                </svg>
+              </div>
               <h3 class="header-trzy">Diligence</h3>
               <p class="pee">
                 Research and confirm brands that present the strongest digital
@@ -85,6 +96,11 @@
               </p>
             </li>
             <li class="lis-dwa">
+              <div class="icon-box">
+                <svg class="icon" width="64" height="64">
+                  <use href="./images/SVG-ikony.svg/Astro-4.svg"></use>
+                </svg>
+              </div>
               <h3 class="header-trzy">Technologies</h3>
               <p class="pee">
                 Design practice focused on digital experiences. We bring forth a
