--- a/index.html
+++ b/index.html
@@ -128,34 +128,62 @@
                 <p class="pee">Product Designer</p>
                 <ul class="member-socials">
                   <li class="member-socials-list-element">
-                    <a class="member-socials-link" href="https://www.instagram.com/"
-                      target="_blank">
-                      <svg class="member-socials-link-icon" width="16" height="16">
+                    <a
+                      class="member-socials-link"
+                      href="https://www.instagram.com/"
+                      target="_blank"
+                    >
+                      <svg
+                        class="member-socials-link-icon"
+                        width="16"
+                        height="16"
+                      >
                         <use href="./images/SVG-ikony.svg#instagram.svg"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-section-member-socials-list-element">
-                    <a class="team-section-member-socials-link" href="https://www.twitter.com/"
-                      target="_blank">
-                      <svg class="team-section-member-socials-link-icon" width="16" height="16">
-                        <use href="./images/SVG-ikony.svg/twitter.svg"></use>
+                    <a
+                      class="team-section-member-socials-link"
+                      href="https://www.twitter.com/"
+                      target="_blank"
+                    >
+                      <svg
+                        class="team-section-member-socials-link-icon"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/SVG-ikony.svg#twitter.svg"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-section-member-socials-list-element">
-                    <a class="team-section-member-socials-link" href="https://www.facebook.com/"
-                      target="_blank">
-                      <svg class="team-section-member-socials-link-icon" width="16" height="16">
-                        <use href="./images/SVG-ikony.svg/facebook.svg"></use>
+                    <a
+                      class="team-section-member-socials-link"
+                      href="https://www.facebook.com/"
+                      target="_blank"
+                    >
+                      <svg
+                        class="team-section-member-socials-link-icon"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/SVG-ikony.svg#facebook.svg"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-section-member-socials-list-element">
-                    <a class="team-section-member-socials-link" href="https://www.linkedin.com/"
-                      target="_blank">
-                      <svg class="team-section-member-socials-link-icon" width="16" height="16">
-                        <use href="./images/SVG-ikony.svg/linkedin2.svg"></use>
+                    <a
+                      class="team-section-member-socials-link"
+                      href="https://www.linkedin.com/"
+                      target="_blank"
+                    >
+                      <svg
+                        class="team-section-member-socials-link-icon"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/SVG-ikony.svg#linkedin2.svg"></use>
                       </svg>
                     </a>
                   </li>
