--- a/index.html
+++ b/index.html
@@ -196,6 +196,68 @@
               <div class="personal">
                 <h3 class="header-trzy">Tom Ford</h3>
                 <p class="pee">Frontend Developer</p>
+                <ul class="member-socials">
+                  <li class="member-socials-list-element">
+                    <a
+                      class="member-socials-link"
+                      href="https://www.instagram.com/"
+                      target="_blank"
+                    >
+                      <svg
+                        class="member-socials-link-icon"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/SVG-ikony.svg#instagram.svg"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-section-member-socials-list-element">
+                    <a
+                      class="team-section-member-socials-link"
+                      href="https://www.twitter.com/"
+                      target="_blank"
+                    >
+                      <svg
+                        class="team-section-member-socials-link-icon"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/SVG-ikony.svg#twitter.svg"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-section-member-socials-list-element">
+                    <a
+                      class="team-section-member-socials-link"
+                      href="https://www.facebook.com/"
+                      target="_blank"
+                    >
+                      <svg
+                        class="team-section-member-socials-link-icon"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/SVG-ikony.svg#facebook.svg"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-section-member-socials-list-element">
+                    <a
+                      class="team-section-member-socials-link"
+                      href="https://www.linkedin.com/"
+                      target="_blank"
+                    >
+                      <svg
+                        class="team-section-member-socials-link-icon"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/SVG-ikony.svg#linkedin2.svg"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="li-dwa">
@@ -208,6 +270,68 @@
               <div class="personal">
                 <h3 class="header-trzy">Camila Garcia</h3>
                 <p class="pee">Marketing</p>
+                <ul class="member-socials">
+                  <li class="member-socials-list-element">
+                    <a
+                      class="member-socials-link"
+                      href="https://www.instagram.com/"
+                      target="_blank"
+                    >
+                      <svg
+                        class="member-socials-link-icon"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/SVG-ikony.svg#instagram.svg"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-section-member-socials-list-element">
+                    <a
+                      class="team-section-member-socials-link"
+                      href="https://www.twitter.com/"
+                      target="_blank"
+                    >
+                      <svg
+                        class="team-section-member-socials-link-icon"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/SVG-ikony.svg#twitter.svg"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-section-member-socials-list-element">
+                    <a
+                      class="team-section-member-socials-link"
+                      href="https://www.facebook.com/"
+                      target="_blank"
+                    >
+                      <svg
+                        class="team-section-member-socials-link-icon"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/SVG-ikony.svg#facebook.svg"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-section-member-socials-list-element">
+                    <a
+                      class="team-section-member-socials-link"
+                      href="https://www.linkedin.com/"
+                      target="_blank"
+                    >
+                      <svg
+                        class="team-section-member-socials-link-icon"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/SVG-ikony.svg#linkedin2.svg"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="li-dwa">
@@ -220,6 +344,68 @@
               <div class="personal">
                 <h3 class="header-trzy">Daniel Wilson</h3>
                 <p class="pee">UI Designer</p>
+                <ul class="member-socials">
+                  <li class="member-socials-list-element">
+                    <a
+                      class="member-socials-link"
+                      href="https://www.instagram.com/"
+                      target="_blank"
+                    >
+                      <svg
+                        class="member-socials-link-icon"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/SVG-ikony.svg#instagram.svg"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-section-member-socials-list-element">
+                    <a
+                      class="team-section-member-socials-link"
+                      href="https://www.twitter.com/"
+                      target="_blank"
+                    >
+                      <svg
+                        class="team-section-member-socials-link-icon"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/SVG-ikony.svg#twitter.svg"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-section-member-socials-list-element">
+                    <a
+                      class="team-section-member-socials-link"
+                      href="https://www.facebook.com/"
+                      target="_blank"
+                    >
+                      <svg
+                        class="team-section-member-socials-link-icon"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/SVG-ikony.svg#facebook.svg"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-section-member-socials-list-element">
+                    <a
+                      class="team-section-member-socials-link"
+                      href="https://www.linkedin.com/"
+                      target="_blank"
+                    >
+                      <svg
+                        class="team-section-member-socials-link-icon"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/SVG-ikony.svg#linkedin2.svg"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
