--- a/index.html
+++ b/index.html
@@ -142,14 +142,14 @@
                       </svg>
                     </a>
                   </li>
-                  <li class="team-section-member-socials-list-element">
+                  <li class="member-socials-list-element">
                     <a
-                      class="team-section-member-socials-link"
+                      class="member-socials-link"
                       href="https://www.twitter.com/"
                       target="_blank"
                     >
                       <svg
-                        class="team-section-member-socials-link-icon"
+                        class="member-socials-link-icon"
                         width="16"
                         height="16"
                       >
@@ -157,14 +157,14 @@
                       </svg>
                     </a>
                   </li>
-                  <li class="team-section-member-socials-list-element">
+                  <li class="member-socials-list-element">
                     <a
-                      class="team-section-member-socials-link"
+                      class="member-socials-link"
                       href="https://www.facebook.com/"
                       target="_blank"
                     >
                       <svg
-                        class="team-section-member-socials-link-icon"
+                        class="member-socials-link-icon"
                         width="16"
                         height="16"
                       >
@@ -172,14 +172,14 @@
                       </svg>
                     </a>
                   </li>
-                  <li class="team-section-member-socials-list-element">
+                  <li class="member-socials-list-element">
                     <a
-                      class="team-section-member-socials-link"
+                      class="member-socials-link"
                       href="https://www.linkedin.com/"
                       target="_blank"
                     >
                       <svg
-                        class="team-section-member-socials-link-icon"
+                        class="member-socials-link-icon"
                         width="16"
                         height="16"
                       >
@@ -212,14 +212,14 @@
                       </svg>
                     </a>
                   </li>
-                  <li class="team-section-member-socials-list-element">
+                  <li class="member-socials-list-element">
                     <a
-                      class="team-section-member-socials-link"
+                      class="member-socials-link"
                       href="https://www.twitter.com/"
                       target="_blank"
                     >
                       <svg
-                        class="team-section-member-socials-link-icon"
+                        class="member-socials-link-icon"
                         width="16"
                         height="16"
                       >
@@ -227,14 +227,14 @@
                       </svg>
                     </a>
                   </li>
-                  <li class="team-section-member-socials-list-element">
+                  <li class="member-socials-list-element">
                     <a
-                      class="team-section-member-socials-link"
+                      class="member-socials-link"
                       href="https://www.facebook.com/"
                       target="_blank"
                     >
                       <svg
-                        class="team-section-member-socials-link-icon"
+                        class="member-socials-link-icon"
                         width="16"
                         height="16"
                       >
@@ -242,14 +242,14 @@
                       </svg>
                     </a>
                   </li>
-                  <li class="team-section-member-socials-list-element">
+                  <li class="member-socials-list-element">
                     <a
-                      class="team-section-member-socials-link"
+                      class="member-socials-link"
                       href="https://www.linkedin.com/"
                       target="_blank"
                     >
                       <svg
-                        class="team-section-member-socials-link-icon"
+                        class="member-socials-link-icon"
                         width="16"
                         height="16"
                       >
@@ -286,14 +286,14 @@
                       </svg>
                     </a>
                   </li>
-                  <li class="team-section-member-socials-list-element">
+                  <li class="member-socials-list-element">
                     <a
-                      class="team-section-member-socials-link"
+                      class="member-socials-link"
                       href="https://www.twitter.com/"
                       target="_blank"
                     >
                       <svg
-                        class="team-section-member-socials-link-icon"
+                        class="member-socials-link-icon"
                         width="16"
                         height="16"
                       >
@@ -301,14 +301,14 @@
                       </svg>
                     </a>
                   </li>
-                  <li class="team-section-member-socials-list-element">
+                  <li class="member-socials-list-element">
                     <a
-                      class="team-section-member-socials-link"
+                      class="member-socials-link"
                       href="https://www.facebook.com/"
                       target="_blank"
                     >
                       <svg
-                        class="team-section-member-socials-link-icon"
+                        class="member-socials-link-icon"
                         width="16"
                         height="16"
                       >
@@ -316,14 +316,14 @@
                       </svg>
                     </a>
                   </li>
-                  <li class="team-section-member-socials-list-element">
+                  <li class="member-socials-list-element">
                     <a
-                      class="team-section-member-socials-link"
+                      class="member-socials-link"
                       href="https://www.linkedin.com/"
                       target="_blank"
                     >
                       <svg
-                        class="team-section-member-socials-link-icon"
+                        class="member-socials-link-icon"
                         width="16"
                         height="16"
                       >
@@ -360,14 +360,14 @@
                       </svg>
                     </a>
                   </li>
-                  <li class="team-section-member-socials-list-element">
+                  <li class="member-socials-list-element">
                     <a
-                      class="team-section-member-socials-link"
+                      class="member-socials-link"
                       href="https://www.twitter.com/"
                       target="_blank"
                     >
                       <svg
-                        class="team-section-member-socials-link-icon"
+                        class="member-socials-link-icon"
                         width="16"
                         height="16"
                       >
@@ -375,14 +375,14 @@
                       </svg>
                     </a>
                   </li>
-                  <li class="team-section-member-socials-list-element">
+                  <li class="member-socials-list-element">
                     <a
-                      class="team-section-member-socials-link"
+                      class="member-socials-link"
                       href="https://www.facebook.com/"
                       target="_blank"
                     >
                       <svg
-                        class="team-section-member-socials-link-icon"
+                        class="member-socials-link-icon"
                         width="16"
                         height="16"
                       >
@@ -390,14 +390,14 @@
                       </svg>
                     </a>
                   </li>
-                  <li class="team-section-member-socials-list-element">
+                  <li class="member-socials-list-element">
                     <a
-                      class="team-section-member-socials-link"
+                      class="member-socials-link"
                       href="https://www.linkedin.com/"
                       target="_blank"
                     >
                       <svg
-                        class="team-section-member-socials-link-icon"
+                        class="member-socials-link-icon"
                         width="16"
                         height="16"
                       >
