--- a/index.html
+++ b/index.html
@@ -416,12 +416,19 @@
           <h2 class="header-dwa">Our Portfolio</h2>
           <ul class="ul-list-trzy">
             <li class="li-trzy">
+              <div class="section-image">
               <img
                 src="./images/app.jpg"
                 alt="bankingapp"
                 width="360"
                 height="300"
               />
+              <p class="section-image-overlay"> Stylish and User-Friendly App Design
+								Concepts · Task Manager App · Calorie
+								Tracker App · Exotic Fruit Ecommerce App ·
+								Cloud Storage App
+                </p>
+              </div>
               <div class="appi">
                 <h3 class="header-trzy">Banking App</h3>
                 <p class="pee">App</p>
