--- a/index.html
+++ b/index.html
@@ -417,16 +417,16 @@
           <ul class="ul-list-trzy">
             <li class="li-trzy">
               <div class="section-image">
-              <img
-                src="./images/app.jpg"
-                alt="bankingapp"
-                width="360"
-                height="300"
-              />
-              <p class="section-image-overlay"> Stylish and User-Friendly App Design
-								Concepts · Task Manager App · Calorie
-								Tracker App · Exotic Fruit Ecommerce App ·
-								Cloud Storage App
+                <img
+                  src="./images/app.jpg"
+                  alt="bankingapp"
+                  width="360"
+                  height="300"
+                />
+                <p class="section-image-overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
                 </p>
               </div>
               <div class="appi">
@@ -435,60 +435,100 @@
               </div>
             </li>
             <li class="li-trzy">
-              <img
-                src="./images/phone_1.jpg"
-                alt="Cashless Payment"
-                width="360"
-                height="300"
-              />
+              <div class="section-image">
+                <img
+                  src="./images/phone_1.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                  height="300"
+                />
+                <p class="section-image-overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+
               <div class="appi">
                 <h3 class="header-trzy">Cashless Payment</h3>
                 <p class="pee">Marketing</p>
               </div>
             </li>
             <li class="li-trzy">
-              <img
-                src="./images/laptop.jpg"
-                alt="MeditationApp"
-                width="360"
-                height="300"
-              />
+              <div class="section-image">
+                <img
+                  src="./images/laptop.jpg"
+                  alt="MeditationApp"
+                  width="360"
+                  height="300"
+                />
+                <p class="section-image-overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+
               <div class="appi">
                 <h3 class="header-trzy">Meditation App</h3>
                 <p class="pee">App</p>
               </div>
             </li>
             <li class="li-trzy">
-              <img
-                src="./images/car.jpg"
-                alt="TaxiService"
-                width="360"
-                height="300"
-              />
+              <div class="section-image">
+                <img
+                  src="./images/car.jpg"
+                  alt="TaxiService"
+                  width="360"
+                  height="300"
+                />
+                <p class="section-image-overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+
               <div class="appi">
                 <h3 class="header-trzy">Taxi Service</h3>
                 <p class="pee">Marketing</p>
               </div>
             </li>
             <li class="li-trzy">
-              <img
-                src="./images/phone.jpg"
-                alt="ScreenILLustrations"
-                width="360"
-                height="300"
-              />
+              <div class="section-image">
+                <img
+                  src="./images/phone.jpg"
+                  alt="ScreenILLustrations"
+                  width="360"
+                  height="300"
+                />
+                <p class="section-image-overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+
               <div class="appi">
                 <h3 class="header-trzy">Screen Illustrations</h3>
                 <p class="pee">Design</p>
               </div>
             </li>
             <li class="li-trzy">
-              <img
-                src="./images/woman.jpg"
-                alt="OnlineCourses"
-                width="360"
-                height="300"
-              />
+              <div class="section-image">
+                <img
+                  src="./images/woman.jpg"
+                  alt="OnlineCourses"
+                  width="360"
+                  height="300"
+                />
+                <p class="section-image-overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+
               <div class="appi">
                 <h3 class="header-trzy">Online Courses</h3>
                 <p class="pee">Marketing</p>
