--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
     </main>
 
     <footer class="footer">
-      <div class="container">
+      <div class="footer-info container">
         <a class="logo-footer" href="./index.html"
           >Web<span class="logo-style-dwa">Studio</span></a
         >
