--- a/index.html
+++ b/index.html
@@ -549,6 +549,9 @@
           digital marketing & growth solutions.
         </p>
       </div>
+      <div class="footer-social">
+        <p class="footer-social-title">Social media</p>
+      </div>
     </footer>
   </body>
 </html>
