--- a/index.html
+++ b/index.html
@@ -541,20 +541,20 @@
 
     <footer class="footer">
       <div class="footer-info container">
-        <a class="logo-footer" href="./index.html"
-          >Web<span class="logo-style-dwa">Studio</span></a
-        >
-        <p class="pepa">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+        <div class="footer-info-left">
+          <a class="logo-footer" href="./index.html"
+            >Web<span class="logo-style-dwa">Studio</span></a
+          >
+          <p class="pepa">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
       </div>
       <div class="footer-social">
         <p class="footer-social-title">Social media</p>
         <ul>
-          <li>
-            
-          </li>
+          <li></li>
         </ul>
       </div>
     </footer>
