--- a/index.html
+++ b/index.html
@@ -553,8 +553,14 @@
       </div>
       <div class="footer-social">
         <p class="footer-social-title">Social media</p>
-        <ul>
-          <li></li>
+        <ul class="footer-social-list">
+          <li class="footer-social-list-el">
+            <a class="footer-social-link" href="https://www.instagram.com/" target="_blank">
+							<svg class="footer-social-link-icon" width="24" height="24">
+								<use href="./images/SVG-ikony.svg#instagram.svg"></use>
+							</svg>
+            </a>
+          </li>
         </ul>
       </div>
     </footer>
