--- a/index.html
+++ b/index.html
@@ -550,18 +550,56 @@
             digital marketing & growth solutions.
           </p>
         </div>
-      </div>
-      <div class="footer-social">
-        <p class="footer-social-title">Social media</p>
-        <ul class="footer-social-list">
-          <li class="footer-social-list-el">
-            <a class="footer-social-link" href="https://www.instagram.com/" target="_blank">
-							<svg class="footer-social-link-icon" width="24" height="24">
-								<use href="./images/SVG-ikony.svg#instagram.svg"></use>
-							</svg>
-            </a>
-          </li>
-        </ul>
+
+        <div class="footer-social">
+          <p class="footer-social-title">Social media</p>
+          <ul class="footer-social-list">
+            <li class="footer-social-list-el">
+              <a
+                class="footer-social-link"
+                href="https://www.instagram.com/"
+                target="_blank"
+              >
+                <svg class="footer-social-link-icon" width="24" height="24">
+                  <use href="./images/SVG-ikony.svg#instagram.svg"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-list-el">
+              <a
+                class="footer-social-link"
+                href="https://www.twitter.com/"
+                target="_blank"
+              >
+                <svg class="footer-social-link-icon" width="24" height="24">
+                  <use href="./images/SVG-ikony.svg#twitter.svg"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-list-el">
+              <a
+                class="footer-social-link"
+                href="https://www.facebook.com/"
+                target="_blank"
+              >
+                <svg class="footer-social-link-icon" width="24" height="24">
+                  <use href="./images/SVG-ikony.svg/facebook.svg"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-list-el">
+              <a
+                class="footer-social-link"
+                href="https://www.linkedin.com/"
+                target="_blank"
+              >
+                <svg class="footer-social-link-icon" width="24" height="24">
+                  <use href="./images/SVG-ikony.svg/linkedin2.svg"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
