--- a/index.html
+++ b/index.html
@@ -583,7 +583,7 @@
                 target="_blank"
               >
                 <svg class="footer-social-link-icon" width="24" height="24">
-                  <use href="./images/SVG-ikony.svg/facebook.svg"></use>
+                  <use href="./images/SVG-ikony.svg#facebook.svg"></use>
                 </svg>
               </a>
             </li>
@@ -594,7 +594,7 @@
                 target="_blank"
               >
                 <svg class="footer-social-link-icon" width="24" height="24">
-                  <use href="./images/SVG-ikony.svg/linkedin2.svg"></use>
+                  <use href="./images/SVG-ikony.svg#linkedin2.svg"></use>
                 </svg>
               </a>
             </li>
