--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <li class="lis-dwa">
               <div class="icon-box">
                 <svg class="icon" width="64" height="64">
-                  <use href="./images/SVG-ikony.svg#Antena-1.svg"></use>
+                  <use href="./images/symbol-defs.svg#icon-antenna-1"></use>
                 </svg>
               </div>
               <h3 class="header-trzy">Strategy</h3>
@@ -73,7 +73,7 @@
             <li class="lis-dwa">
               <div class="icon-box">
                 <svg class="icon" width="64" height="64">
-                  <use href="./images/SVG-ikony.svg#Zegar-2.svg"></use>
+                  <use href="./images/symbol-defs.svg#icon-diagram-1"></use>
                 </svg>
               </div>
 
@@ -86,7 +86,7 @@
             <li class="lis-dwa">
               <div class="icon-box">
                 <svg class="icon" width="64" height="64">
-                  <use href="./images/SVG-ikony.svg#Laptop-3.svg"></use>
+                  <use href="./images/symbol-defs.svg#icon-diagram-1"></use>
                 </svg>
               </div>
               <h3 class="header-trzy">Diligence</h3>
@@ -98,7 +98,7 @@
             <li class="lis-dwa">
               <div class="icon-box">
                 <svg class="icon" width="64" height="64">
-                  <use href="./images/SVG-ikony.svg#Astro-4.svg"></use>
+                  <use href="./images/symbol-defs.svg#icon-astronaut-1"></use>
                 </svg>
               </div>
               <h3 class="header-trzy">Technologies</h3>
