--- a/index.html
+++ b/index.html
@@ -138,7 +138,9 @@
                         width="16"
                         height="16"
                       >
-                        <use href="./images/SVG-ikony.svg#instagram.svg"></use>
+                        <use
+                          href="./images/symbol-defs.svg#icon-instagram"
+                        ></use>
                       </svg>
                     </a>
                   </li>
@@ -153,7 +155,7 @@
                         width="16"
                         height="16"
                       >
-                        <use href="./images/SVG-ikony.svg#twitter.svg"></use>
+                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -168,7 +170,9 @@
                         width="16"
                         height="16"
                       >
-                        <use href="./images/SVG-ikony.svg#facebook.svg"></use>
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook"
+                        ></use>
                       </svg>
                     </a>
                   </li>
@@ -183,7 +187,9 @@
                         width="16"
                         height="16"
                       >
-                        <use href="./images/SVG-ikony.svg#linkedin2.svg"></use>
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin2"
+                        ></use>
                       </svg>
                     </a>
                   </li>
@@ -208,7 +214,9 @@
                         width="16"
                         height="16"
                       >
-                        <use href="./images/SVG-ikony.svg#instagram.svg"></use>
+                        <use
+                          href="./images/symbol-defs.svg#icon-instagram"
+                        ></use>
                       </svg>
                     </a>
                   </li>
@@ -223,7 +231,7 @@
                         width="16"
                         height="16"
                       >
-                        <use href="./images/SVG-ikony.svg#twitter.svg"></use>
+                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -238,7 +246,9 @@
                         width="16"
                         height="16"
                       >
-                        <use href="./images/SVG-ikony.svg#facebook.svg"></use>
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook"
+                        ></use>
                       </svg>
                     </a>
                   </li>
@@ -253,7 +263,9 @@
                         width="16"
                         height="16"
                       >
-                        <use href="./images/SVG-ikony.svg#linkedin2.svg"></use>
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin2"
+                        ></use>
                       </svg>
                     </a>
                   </li>
@@ -282,7 +294,9 @@
                         width="16"
                         height="16"
                       >
-                        <use href="./images/SVG-ikony.svg#instagram.svg"></use>
+                        <use
+                          href="./images/symbol-defs.svg#icon-instagram"
+                        ></use>
                       </svg>
                     </a>
                   </li>
@@ -297,7 +311,7 @@
                         width="16"
                         height="16"
                       >
-                        <use href="./images/SVG-ikony.svg#twitter.svg"></use>
+                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -312,7 +326,9 @@
                         width="16"
                         height="16"
                       >
-                        <use href="./images/SVG-ikony.svg#facebook.svg"></use>
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook"
+                        ></use>
                       </svg>
                     </a>
                   </li>
@@ -327,7 +343,9 @@
                         width="16"
                         height="16"
                       >
-                        <use href="./images/SVG-ikony.svg#linkedin2.svg"></use>
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin2"
+                        ></use>
                       </svg>
                     </a>
                   </li>
@@ -356,7 +374,9 @@
                         width="16"
                         height="16"
                       >
-                        <use href="./images/SVG-ikony.svg#instagram.svg"></use>
+                        <use
+                          href="./images/symbol-defs.svg#icon-instagram"
+                        ></use>
                       </svg>
                     </a>
                   </li>
@@ -371,7 +391,7 @@
                         width="16"
                         height="16"
                       >
-                        <use href="./images/SVG-ikony.svg#twitter.svg"></use>
+                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -386,7 +406,9 @@
                         width="16"
                         height="16"
                       >
-                        <use href="./images/SVG-ikony.svg#facebook.svg"></use>
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook"
+                        ></use>
                       </svg>
                     </a>
                   </li>
@@ -401,7 +423,9 @@
                         width="16"
                         height="16"
                       >
-                        <use href="./images/SVG-ikony.svg#linkedin2.svg"></use>
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin2"
+                        ></use>
                       </svg>
                     </a>
                   </li>
