--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                         height="16"
                       >
                         <use
-                          href="./images/symbol-defs.svg#icon-instagram"
+                          href="./images/icons.svg#icon-instagram"
                         ></use>
                       </svg>
                     </a>
@@ -155,7 +155,7 @@
                         width="16"
                         height="16"
                       >
-                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -171,7 +171,7 @@
                         height="16"
                       >
                         <use
-                          href="./images/symbol-defs.svg#icon-facebook"
+                          href="./images/icons.svg#icon-facebook"
                         ></use>
                       </svg>
                     </a>
@@ -188,7 +188,7 @@
                         height="16"
                       >
                         <use
-                          href="./images/symbol-defs.svg#icon-linkedin2"
+                          href="./images/icons.svg#icon-linkedin2"
                         ></use>
                       </svg>
                     </a>
@@ -215,7 +215,7 @@
                         height="16"
                       >
                         <use
-                          href="./images/symbol-defs.svg#icon-instagram"
+                          href="./images/icons.svg#icon-instagram"
                         ></use>
                       </svg>
                     </a>
@@ -231,7 +231,7 @@
                         width="16"
                         height="16"
                       >
-                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -247,7 +247,7 @@
                         height="16"
                       >
                         <use
-                          href="./images/symbol-defs.svg#icon-facebook"
+                          href="./images/icons.svg#icon-facebook"
                         ></use>
                       </svg>
                     </a>
@@ -264,7 +264,7 @@
                         height="16"
                       >
                         <use
-                          href="./images/symbol-defs.svg#icon-linkedin2"
+                          href="./images/icons.svg#icon-linkedin2"
                         ></use>
                       </svg>
                     </a>
@@ -295,7 +295,7 @@
                         height="16"
                       >
                         <use
-                          href="./images/symbol-defs.svg#icon-instagram"
+                          href="./images/icons.svg#icon-instagram"
                         ></use>
                       </svg>
                     </a>
@@ -311,7 +311,7 @@
                         width="16"
                         height="16"
                       >
-                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -327,7 +327,7 @@
                         height="16"
                       >
                         <use
-                          href="./images/symbol-defs.svg#icon-facebook"
+                          href="./images/icons.svg#icon-facebook"
                         ></use>
                       </svg>
                     </a>
@@ -344,7 +344,7 @@
                         height="16"
                       >
                         <use
-                          href="./images/symbol-defs.svg#icon-linkedin2"
+                          href="./images/icons.svg#icon-linkedin2"
                         ></use>
                       </svg>
                     </a>
@@ -375,7 +375,7 @@
                         height="16"
                       >
                         <use
-                          href="./images/symbol-defs.svg#icon-instagram"
+                          href="./images/icons.svg#icon-instagram"
                         ></use>
                       </svg>
                     </a>
@@ -391,7 +391,7 @@
                         width="16"
                         height="16"
                       >
-                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -407,7 +407,7 @@
                         height="16"
                       >
                         <use
-                          href="./images/symbol-defs.svg#icon-facebook"
+                          href="./images/icons.svg#icon-facebook"
                         ></use>
                       </svg>
                     </a>
@@ -424,7 +424,7 @@
                         height="16"
                       >
                         <use
-                          href="./images/symbol-defs.svg#icon-linkedin2"
+                          href="./images/icons.svg#icon-linkedin2"
                         ></use>
                       </svg>
                     </a>
